--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Roboto', Arial, sans-serif;
   background-color: black;
 }
@@ -57,4 +58,8 @@ button:focus,
 button:focus-visible {
   outline: none;
   box-shadow: none;
+}
+
+h1 {
+  margin: 0;
 }
