--- a/src/pages/StorePage/style.module.scss
+++ b/src/pages/StorePage/style.module.scss
@@ -1,12 +1,14 @@
 .storePageContainer {
-    display: flex;
-    flex-direction: column;
-    min-height: 85vh;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 85vh;
+  position: relative;
+  margin: 0;
+  padding: 0;
 }
-  
-  .storeContent {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-  } 
+
+.storeContent {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
