--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -9,7 +9,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 40px;
-  background: linear-gradient(180deg, rgba(18, 18, 18, 0.8) 0%, rgba(18, 18, 18, 0.95) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(18, 18, 18, 0.8) 0%,
+    rgba(18, 18, 18, 0.95) 100%
+  );
   box-shadow: 0 -8px 16px rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(8px);
   z-index: 1000;
@@ -47,7 +51,7 @@
     opacity: 1;
     color: #7c3aed;
   }
-  
+
   .label {
     color: #7c3aed;
     opacity: 1;
@@ -113,7 +117,7 @@
   border: none;
   cursor: pointer;
   font-size: 14px;
-  
+
   .anticon {
     font-size: 16px;
   }
@@ -155,12 +159,12 @@
 
 .mythical {
   background: rgba(163, 88, 251, 0.1);
-  color: #A358FB;
+  color: #a358fb;
 }
 
 .rare {
   background: rgba(89, 126, 247, 0.1);
-  color: #597EF7;
+  color: #597ef7;
 }
 
 .common {
@@ -170,7 +174,7 @@
 
 .legend {
   background: rgba(255, 192, 67, 0.1);
-  color: #FFC043;
+  color: #ffc043;
 }
 
 .itemId {
@@ -184,7 +188,7 @@
   align-items: center;
   padding: 16px;
   flex: 1;
-  
+
   img {
     max-width: 100%;
     max-height: 100%;
@@ -209,7 +213,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #7C3AED;
+  background: #7c3aed;
   color: white;
   padding: 8px 16px;
   border-radius: 12px;
@@ -303,7 +307,7 @@
   align-items: center;
   padding: 12px 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  
+
   span {
     font-size: 16px;
   }
@@ -311,7 +315,7 @@
 
 .propertyValue {
   background: rgba(124, 58, 237, 0.1);
-  color: #7C3AED;
+  color: #7c3aed;
   font-weight: bold;
   padding: 4px 12px;
   border-radius: 16px;
