--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -83,6 +83,12 @@
   gap: 8px;
 }
 
+.closeButton {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
 .logo {
   display: flex;
   align-items: center;
