--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ html {
 
 body {
   margin: 0;
+  margin-top: 1rem;
   padding: 0;
   font-family: 'Roboto', Arial, sans-serif;
   background-color: black;
