--- a/src/components/style.module.scss
+++ b/src/components/style.module.scss
@@ -901,3 +901,39 @@
     font-size: 20px;
   }
 }
+
+.tgsContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.tgsPlayer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tgsPlaceholder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.tgsPlaceholderText {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 14px;
+}
+
+.noImage {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
+}
