--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -57,6 +57,29 @@
   min-height: 100vh;
 }
 
+.emptyState {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px 20px;
+  text-align: center;
+  color: var(--tg-theme-hint-color);
+  
+  p {
+    margin: 4px 0;
+    
+    &:first-child {
+      font-size: 16px;
+      color: var(--tg-theme-text-color);
+    }
+    
+    &:last-child {
+      font-size: 14px;
+    }
+  }
+}
+
 /*SellPage*/
 
 .sellPageContainer {
